clusters/cosmos/apps/vaultwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: vaultwarden-ingress
spec:
 tls:
 - hosts:
   - vaultwarden.cosmos.cboxlab.com
   secretName: snappit-tls-secret
 rules:
 - host: vaultwarden.cosmos.cboxlab.com
   http:
     paths:
     - backend:
         service:
           name: vaultwarden
           port:
             number: 80
       path: /
       pathType: Prefix
